# localpass

./: .bandit  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  security_audit.json
audit-workspace/configs/: audit-config.json
audit-workspace/findings/: static-analysis.json  test-static-analysis.json
specs/001-create-a-secure/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-create-a-secure/contracts/: cli-interface.md  security-interface.md
specs/002-the-auth-feature/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-the-auth-feature/contracts/: audit-operations.yaml  session-operations.yaml
src/: __init__.py
src/audit/: __init__.py
src/audit/cli/: audit_cli.py
src/audit/models/: __init__.py  audit_finding.py  compliance_gap.py  remediation_plan.py  security_control.py  security_report.py  threat_vector.py  vulnerability_assessment.py
src/audit/services/: static_analysis_service.py
src/cli/: decorators.py  main.py
src/config/: __init__.py  session_config.py
src/models/: auth_event.py  database_metadata.py  master_credential.py  password_entry.py  session.py  session_file.py
src/services/: audit_service.py  auth_service.py  database_service.py  encryption_service.py  key_derivation_service.py  master_password_service.py  memory_security_service.py  password_generator.py  password_service.py  session_service.py
src/services/storage/: __init__.py  session_storage_service.py
tests/audit/contract/: test_audit_controls.py  test_audit_finding_detail.py  test_audit_finding_update.py  test_audit_findings.py  test_audit_scan.py  test_executive_summary.py  test_remediation_plan.py  test_report_generate.py  test_report_retrieve.py  test_report_templates.py
tests/audit/integration/: test_config_review.py  test_crypto_validation.py  test_dependency_scan.py  test_report_generation.py  test_static_analysis.py
tests/contract/: test_audit_log.py  test_audit_query.py  test_cli_add.py  test_cli_auth.py  test_cli_init.py  test_security_master.py  test_session_create.py  test_session_extend.py  test_session_load.py  test_session_persist.py  test_session_terminate.py  test_session_validate.py
tests/integration/: test_init_flow.py  test_session_basic.py  test_session_expiration.py  test_session_extension.py  test_session_logout.py
tests/performance/: test_session_performance.py
tests/security/: test_file_permissions.py  test_memory_clearing.py  test_session_encryption.py
tests/unit/: test_audit_service.py  test_memory_security_service.py  test_session_storage_service.py
